--- a/API/package.json
+++ b/API/package.json
@@ -28,7 +28,6 @@
     "babel-preset-env": "^1.7.0",
     "concurrently": "^5.1.0",
     "debug": "^4.1.1",
-    "eslint": "^6.8.0",
     "fork-ts-checker-webpack-plugin": "^4.0.4",
     "node-watch": "^0.6.4",
     "nodemon": "^2.0.2",
@@ -42,7 +41,7 @@
     "webpack-cli": "^3.3.11"
   },
   "engines": {
-    "node": ">=0.10.3 <0.12"
+    "node": "^16"
   },
   "nodemonConfig": {
     "watch": [
