just build without fibers

--- a/viewer/package.json
+++ b/viewer/package.json
@@ -6,11 +6,10 @@
     "serve": "vue-cli-service serve --port 8081",
     "build": "vue-cli-service build",
     "buildFast": "vue-cli-service build --skip-plugins @vue/cli-plugin-eslint",
+    "version": "node -v",
     "lint": "vue-cli-service lint",
-    "deploy": "npm run build && rsync -r -e ssh -avz --delete-after  ../server/dist/server/public pi@rpi.local:raspestrio/Vermuth/server/dist/server/",
+    "deploy": "rsync -r -e ssh -avz --delete-after  ../server/dist/server/public pi@lumestrio21.local:raspestrio/Vermuth/server/dist/server/",
     "debug": "vue-cli-service build --mode=debug --watch",
-    "deploy2": "npm run build && rsync -r -e ssh -avz --delete-after  ../server/public pi@lampignon2.local:vermuth/server/",
-    "deploylogic": "npm run build && rsync -r -e ssh -avz --delete-after  ../server/public pi@radiologic.local:Documents/vermuth/server/dist/server/",
     "lintAll": "tslint --project ../API --fix && npm run lint"
   },
   "dependencies": {
@@ -36,19 +35,18 @@
     "@types/socket.io-client": "^1.4.32",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
-    "eslint-plugin-import": "^2.26.0",
-    "@vue/cli-plugin-pwa": "^4",
-    "@vue/cli-plugin-typescript": "^4",
-    "@vue/cli-service": "^4",
+    "@vue/cli-plugin-typescript": "^5",
+    "@vue/cli-service": "^5",
     "compression-webpack-plugin": "^3",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^25",
     "eslint-plugin-prefer-arrow": "^1.2.1",
     "eslint-plugin-vue": "^6.2.2",
-    "fibers": "^5",
     "material-design-icons-iconfont": "^5.0.1",
     "sass": "^1.26.5",
-    "sass-loader": "^10",
+    "sass-loader": "^10.4.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "tslib": "^2.6.1",
     "typescript": "^3.8.3",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-eslint-parser": "^7.0.0",
